transmission/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  namespace: media
  labels:
    app: transmission
  annotations:
    fluxcd.io/automated: "true"
    fluxcd.io/tag.transmission: semver:~2
spec:
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
      - name: transmission
        image: haugene/transmission-openvpn:2.10
        imagePullPolicy: IfNotPresent
        securityContext:
          capabilities:
            add: ["NET_ADMIN"]
        ports:
        - name: http
          containerPort: 9091
          protocol: TCP
        volumeMounts:
        - name: transmission-root
          mountPath: "/data"
      dnsConfig:
        nameservers:
          - 8.8.4.4
          - 8.8.8.8
        options:
          - name: ndots
            value: "2"
          - name: edns0
      volumes:
      - name: transmission-root
        persistentVolumeClaim:
          claimName: pvc-nfs-client-provisioner-transmission-root
