transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission-service
  namespace: media
spec:
  ports:
  - port: 80
    targetPort: 9091
    protocol: TCP
    name: http
  selector:
    app: transmission
